syntax="proto3";

package proto;
option go_package = "./;proto";

import "mom_common.proto";
import "production_line.proto";

message ProductReworkProcessInfo {
	//ID 
 	string id=1;
    //代号
    string code=2;
    //描述
    string description=3;
    //是否启用
    bool enable=4;
    //是否报工
    bool enableReport=5;
    //备注
    string remark=6;
    //生产产线ID
    string productionLineID=7;
    ProductionLineInfo productionLine=8;
    //可用生产工站
    repeated string availableStationIDs=9;
    repeated ProductReworkProcessAvailableStationInfo productionStations=10;
    //支持生产工序
    repeated string availableProcessIDs=11;
    repeated ProductReworkProcessAvailableProcessInfo productionProcesses=12;
}

message ProductReworkProcessAvailableStationInfo{
    string id=1;
    string ProductReworkProcessID=2;
    string ProductionStationID=3;
    ProductionStationInfo ProductionStation=4;
}

message ProductReworkProcessAvailableProcessInfo{
    string id=1;
    string ProductReworkProcessID=2;
    string ProductionProcessID=3;
    ProductionProcessInfo ProductionProcess=4;
}

message QueryProductReworkProcessRequest{
    // @inject_tag: uri:"pageIndex" form:"pageIndex"
    int64 pageIndex=1;
    // @inject_tag: uri:"pageSize" form:"pageSize"
    int64 pageSize=2;
    // @inject_tag: uri:"sortConfig" form:"sortConfig"
    string sortConfig=3;
	//生产产线ID
    // @inject_tag: uri:"productionLineID" form:"productionLineID"
    string productionLineID=4;
	//代号或描述
    // @inject_tag: uri:"code" form:"code"
    string code=5;
}

message QueryProductReworkProcessResponse{
    Code code=1;
    string message=2;
    repeated ProductReworkProcessInfo data=3;
    int64 pages=4;
    int64 records=5;
    int64 total=6;
}

message GetAllProductReworkProcessResponse{
    Code code=1;
    string message=2;
    repeated ProductReworkProcessInfo data=3;
}

message GetProductReworkProcessDetailResponse{
    Code code=1;
    string message=2;
    ProductReworkProcessInfo data=3;
}